index terminado, estilos generales de css tambien

--- a/Desktop/comision-54535/desafios/Desafio 3/pages/Historia.html
+++ b/Desktop/comision-54535/desafios/Desafio 3/pages/Historia.html
@@ -9,7 +9,7 @@
 
     <!-- link css -->
     <link rel="stylesheet" href="../css/main.css">
-    <title> Inicio - Counter Strike: Global Offensive </title>
+    <title> Historia - Counter Strike: Global Offensive </title>
 </head>
 
 <body>
@@ -55,12 +55,23 @@
 
     </header>
 
-<footer>
-    <h3> todos los derechos reservados &copy;</h3>
-    <a href="#arriba"> Volver arriba </a>
-</footer>
+    <footer class="footer">
+        
+      <h3> Todos los derechos reservados &copy;</h3>
 
-<!-- scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+      <!-- redes sociales -->
+      <div>
+        <img class="footer__img" src="" alt="Instagram">
+        <img class="footer__img" src="" alt="Youtube">
+        <img class="footer__img" src="" alt="Steam">
+        <img class="footer__img" src="" alt="Twitter">
+      </div>
+
+        <a class="footer__a" href="#arriba"> Volver arriba </a>
+    </footer>
+
+    <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</body>
 </body>
 </html>
