index listo sin mq

--- a/Desktop/comision-54535/desafios/Desafio 3/index.html
+++ b/Desktop/comision-54535/desafios/Desafio 3/index.html
@@ -35,13 +35,13 @@
                   <a class="nav-link nav__a" href="../Desafio 3/pages/Historia.html"> Historia </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__a" href="#"> Competencias Tier 1 </a>
+                  <a class="nav-link nav__a" href="../Desafio 3/pages/Competencias Tier 1.html"> Competencias Tier 1 </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__a" href="#"> Jugadores Historicos </a>
+                  <a class="nav-link nav__a" href="../Desafio 3/pages/Jugadores Historicos.html"> Jugadores Historicos </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__a" href="#"> Skins </a>
+                  <a class="nav-link nav__a" href="../Desafio 3/pages/Skins.html"> Skins </a>
                 </li>
               </ul>
             </div>
