--- a/Desktop/comision-54535/desafios/Desafio-3/index.html
+++ b/Desktop/comision-54535/desafios/Desafio-3/index.html
@@ -35,7 +35,7 @@
                   <a class="nav-link nav__a" href="../Desafio-3/pages/Historia.html"> Historia </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__a" href="../Desafio-3/pages/Mejores Equipos.html"> Competencias Tier 1 </a>
+                  <a class="nav-link nav__a" href="../Desafio-3/pages/Mejores Equipos.html"> Mejores Equipos </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link nav__a" href="../Desafio-3/pages/Jugadores Historicos.html"> Jugadores Historicos </a>
