--- a/Desktop/comision-54535/desafios/Desafio-3/pages/Historia.html
+++ b/Desktop/comision-54535/desafios/Desafio-3/pages/Historia.html
@@ -95,7 +95,7 @@
 
     <footer class="footer">
         
-      <h3> Todos los derechos reservados &copy;</h3>
+      <h3> © 2023 Camilo Escobar. Todos los derechos reservados.</h3>
 
       <!-- redes sociales -->
       <div>
